Demonstrate workflow/process registration through Registration API

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -2015,6 +2015,220 @@
   },
   {
    "cell_type": "markdown",
+   "id": "11ec9c98-96de-477e-9132-244790440fbd",
+   "metadata": {},
+   "source": [
+    "We will now register a Record representing a workflow/process through Registration API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52a1e622-8b00-4527-97ed-0c32b6b8fd2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_str=\"\"\"\n",
+    "{\n",
+    "  \"inputs\": {\n",
+    "    \"source\": {\n",
+    "      \"id\": \"worldcereal_inference\",\n",
+    "      \"type\": \"Feature\",\n",
+    "      \"conformsTo\": [\n",
+    "        \"http://www.opengis.net/spec/ogcapi-records-1/1.0/req/record-core\"\n",
+    "      ],\n",
+    "      \"geometry\": null,\n",
+    "      \"properties\": {\n",
+    "        \"created\": \"2024-05-17T00:00:00Z\",\n",
+    "        \"updated\": \"2024-05-17T00:00:00Z\",\n",
+    "        \"type\": \"process\",\n",
+    "        \"title\": \"ESA worldcereal global maize detector\",\n",
+    "        \"description\": \"A maize detection algorithm.\",\n",
+    "        \"cost_estimate\": 0.1,\n",
+    "        \"cost_unit\": \"platform credits per km²\",\n",
+    "        \"keywords\": [\n",
+    "          \"agriculture\",\n",
+    "          \"crops\",\n",
+    "          \"apex_algorithm\"\n",
+    "        ],\n",
+    "        \"language\": {\n",
+    "          \"code\": \"en-US\",\n",
+    "          \"name\": \"English (United States)\"\n",
+    "        },\n",
+    "        \"languages\": [\n",
+    "          {\n",
+    "            \"code\": \"en-US\",\n",
+    "            \"name\": \"English (United States)\"\n",
+    "          }\n",
+    "        ],\n",
+    "        \"contacts\": [\n",
+    "          {\n",
+    "            \"name\": \"Kristof Van Tricht\",\n",
+    "            \"position\": \"Researcher\",\n",
+    "            \"organization\": \"VITO\",\n",
+    "            \"links\": [\n",
+    "              {\n",
+    "                \"href\": \"https://www.vito.be/\",\n",
+    "                \"rel\": \"about\",\n",
+    "                \"type\": \"text/html\"\n",
+    "              },\n",
+    "              {\n",
+    "                \"href\": \"https://github.com/kvantricht\",\n",
+    "                \"rel\": \"about\",\n",
+    "                \"type\": \"text/html\"\n",
+    "              }\n",
+    "            ],\n",
+    "            \"contactInstructions\": \"Contact via VITO\",\n",
+    "            \"roles\": [\n",
+    "              \"principal investigator\"\n",
+    "            ]\n",
+    "          },\n",
+    "          {\n",
+    "            \"name\": \"VITO\",\n",
+    "            \"links\": [\n",
+    "              {\n",
+    "                \"href\": \"https://www.vito.be/\",\n",
+    "                \"rel\": \"about\",\n",
+    "                \"type\": \"text/html\"\n",
+    "              }\n",
+    "            ],\n",
+    "            \"contactInstructions\": \"SEE WEBSITE\",\n",
+    "            \"roles\": [\n",
+    "              \"processor\"\n",
+    "            ]\n",
+    "          }\n",
+    "        ],\n",
+    "        \"themes\": [\n",
+    "          {\n",
+    "            \"concepts\": [\n",
+    "              {\n",
+    "                \"id\": \"AGRICULTURE\"\n",
+    "              },\n",
+    "              {\n",
+    "                \"id\": \"FIELD CROP PRODUCTS\"\n",
+    "              }\n",
+    "            ],\n",
+    "            \"scheme\": \"https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/sciencekeywords\"\n",
+    "          }\n",
+    "        ],\n",
+    "        \"formats\": [\n",
+    "          {\n",
+    "            \"name\": \"GeoTiff\"\n",
+    "          }\n",
+    "        ],\n",
+    "        \"license\": \"other\"\n",
+    "      },\n",
+    "      \"linkTemplates\": [],\n",
+    "      \"links\": [\n",
+    "        {\n",
+    "          \"rel\": \"openeo-process\",\n",
+    "          \"type\": \"application/json\",\n",
+    "          \"title\": \"openEO Process Definition\",\n",
+    "          \"href\": \"https://github.com/ESA-APEX/apex_algorithms/blob/main/openeo_udp/worldcereal_inference.json\"\n",
+    "        },\n",
+    "        {\n",
+    "          \"rel\": \"git\",\n",
+    "          \"type\": \"application/json\",\n",
+    "          \"title\": \"Git source repository\",\n",
+    "          \"href\": \"https://github.com/WorldCereal/worldcereal-classification.git\"\n",
+    "        },\n",
+    "        {\n",
+    "          \"rel\": \"service\",\n",
+    "          \"type\": \"application/json\",\n",
+    "          \"title\": \"CDSE openEO federation\",\n",
+    "          \"href\": \"https://openeofed.dataspace.copernicus.eu/\"\n",
+    "        },\n",
+    "        {\n",
+    "          \"rel\": \"license\",\n",
+    "          \"href\": \"https://apex.esa.int/license\"\n",
+    "        }\n",
+    "      ]\n",
+    "    },\n",
+    "    \"target\": \"https://resource-catalogue.develop.eoepca.org/\",\n",
+    "    \"type\": \"item\"\n",
+    "  }\n",
+    "}\n",
+    "\"\"\"\n",
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/processes/register/execution\",\n",
+    "    json=json.loads(json_str)\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fff1f593-022f-4d20-8c08-c7f3ac649b57",
+   "metadata": {},
+   "source": [
+    "Check if the Record is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31a6ea52-58e4-45fc-9257-02a7f09bf54b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/worldcereal_inference\", headers=dict(f=\"json\"))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82cd7a1a-f230-4184-9417-0cc47c3eb381",
+   "metadata": {},
+   "source": [
+    "We will now unregister the Record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6cadc12-6e94-4ceb-a8b2-83e29b2aea34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/processes/deregister/execution\",\n",
+    "    json={\n",
+    "        \"inputs\": {\n",
+    "            \"id\": \"worldcereal_inference\",\n",
+    "            \"target\": \"https://resource-catalogue.develop.eoepca.org\"\n",
+    "        }\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2840a894-972e-42f2-bf9f-8c6885d373e3",
+   "metadata": {},
+   "source": [
+    "Check if the Record is actually unregistered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d20d5895-97b6-4817-ba9c-64efb3d63e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/worldcereal_inference\", headers=dict(f=\"json\"))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d71eb629-31ca-436a-8557-548cca3b8e1a",
    "metadata": {},
    "source": [
