Demonstrate STAC Collection Search

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -2821,6 +2821,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77783293-6148-49d6-bf80-4162c241f3bb",
+   "metadata": {},
+   "source": [
+    "Make a Collection Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb44a9bc-0e4d-42f5-b59a-2357738dc714",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection_search = catalog.collection_search(q=\"Sentinel\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b1cbd66-fe08-4b1c-bb93-9437687af4b6",
+   "metadata": {},
+   "source": [
+    "Search results:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c57d0e6a-909e-4162-acbb-3eeed865be0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection_search.matched()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bf5de7f-101c-4b3e-b093-1cbd61fe28ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection_search.collection_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "491054e0-7666-4dda-aa4f-bde8408dfccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for collection in collection_search.collections():\n",
+    "    print(collection.id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "10bf1d4d-c52e-466e-832d-451cf3aac01d",
    "metadata": {},
    "source": [
