Add STAC API Transactions demo

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -2878,6 +2878,334 @@
   },
   {
    "cell_type": "markdown",
+   "id": "55d5ac16-9e3a-44ca-97dc-e7859bb07147",
+   "metadata": {},
+   "source": [
+    "## STAC API Transactions demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8325955-e2a0-4f3b-aec2-d6084343b88c",
+   "metadata": {},
+   "source": [
+    "Examples of STAC API transactions extension."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2eb1d657-6252-4646-93a4-b7ee24d566d2",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, the user will use the requests client library to test the STAC API Transactions interface."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a670f4b-f6c2-4e09-88ca-2e44668a4dda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83aa450f-c538-4b73-b6d5-3a536daba612",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_domain = \"develop.eoepca.org\"\n",
+    "system_stac_endpoint = f'https://resource-catalogue.{base_domain}/stac'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f5f8f43-6c1b-4963-9d54-e47c33de8e57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection_id = 'S2MSI2A'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11d287be-7278-442d-8812-d42858cfff1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stac_data = '../data/S2B_MSIL2A_20190910T095029_N0213_R079_T33UWQ_20190910T124513.json'\n",
+    "with open(stac_data) as sf:\n",
+    "    si = json.load(sf)\n",
+    "stac_id = si['id']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e7ec086-75e5-4f37-8aa6-5b116e149a27",
+   "metadata": {},
+   "source": [
+    "Test if STAC Item already exists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4ac043e-e65d-4d7c-9b96-41cf5d7aa46d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/{collection_id}/items/{stac_id}\", headers=dict(f=\"json\"))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd6e7f02-7a14-406d-a366-29cee2b64986",
+   "metadata": {},
+   "source": [
+    "Create new STAC Item by POST in the appropriate collection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "169fda2b-81e5-4bf6-acbb-40e2edc397e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f'{system_stac_endpoint}/collections/{collection_id}/items'\n",
+    "headers = {'content-type': 'application/geo+json'}\n",
+    "payload = open(stac_data)\n",
+    "req = requests.post(url, data=payload, headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c9d148d-f22a-4d03-8948-7ababab95175",
+   "metadata": {},
+   "source": [
+    "Test if STAC Item was created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62b58216-6068-417c-9b88-9bab595352a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(f\"{system_stac_endpoint}/collections/{collection_id}/items/{stac_id}\", headers=dict(f=\"json\"))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e5dfbd8-0f22-43a3-afd0-07eb99446462",
+   "metadata": {},
+   "source": [
+    "Delete STAC Item."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bff9c5de-eb5c-4907-b3e8-086fcd73e01a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f\"{system_stac_endpoint}/collections/{collection_id}/items/{stac_id}\"\n",
+    "req = requests.delete(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4de9c63f-bfc1-45a0-bd20-1662a65f5bf9",
+   "metadata": {},
+   "source": [
+    "Test if STAC Item was deleted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c823018-76fa-4123-9b4a-da76ce3cb3f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(f\"{system_stac_endpoint}/collections/{collection_id}/items/{stac_id}\", headers=dict(f=\"json\"))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8677faf-0186-4988-a210-75de7ca81358",
+   "metadata": {},
+   "source": [
+    "Get sample STAC collection from STAC specification examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffc98b42-8aa2-4ca4-85e1-00f236d324a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(\"https://raw.githubusercontent.com/radiantearth/stac-spec/refs/heads/master/examples/collection.json\")\n",
+    "response.raise_for_status()\n",
+    "payload = response.json()\n",
+    "simple_collection_id = payload['id']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431bfecf-afb0-448f-8e40-e6a61d8f36d4",
+   "metadata": {},
+   "source": [
+    "Test if STAC Collection already exists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1167b381-5a88-45fa-bf58-74df2ee96f07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(f\"{system_stac_endpoint}/collections/{simple_collection_id}\", headers=dict(f=\"json\"))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d793b5bf-a0db-42aa-926f-e8685aeb2e8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# QA Records\n",
+    "# url = f'https://resource-catalogue.{base_domain}/collections/metadata:main/items/{simple_collection_id}'\n",
+    "# req = requests.delete(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b516cf4b-6b3d-4458-8b76-30d0e6c4ffd2",
+   "metadata": {},
+   "source": [
+    "Create STAC Collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96db384d-b80a-4463-a712-6dee009ef3be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# QA Records\n",
+    "# url = f'https://resource-catalogue.{base_domain}/collections/metadata:main/items/'\n",
+    "# headers = {'content-type': 'application/geo+json'}\n",
+    "# req = requests.post(url, data=payload, headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5882d340-be6a-4a39-a83e-abc94e187ffb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f'{system_stac_endpoint}/collections'\n",
+    "headers = {'Content-Type': 'application/geo+json'}\n",
+    "req = requests.post(url, data=payload, headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb2445a1-9888-4dd7-8c17-cd731ba9115f",
+   "metadata": {},
+   "source": [
+    "Test if STAC Collection was created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0abc2c07-3cf0-432b-aad4-5b117e845470",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(f\"{system_stac_endpoint}/collections/{simple_collection_id}\", headers=dict(f=\"json\"))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "600bf23d-70ad-474f-8144-4dba0189c4df",
+   "metadata": {},
+   "source": [
+    "Create multiple items from Item Collection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0ebe8cd-ff65-4f00-872e-4d9544ce7b1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_collection_data = '../data/item_collection.json'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c29ba70-4612-4b7f-9ee4-3b5061cff36c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f'{system_stac_endpoint}/collections/{simple_collection_id}/items'\n",
+    "headers = {'content-type': 'application/json'}\n",
+    "payload = open(item_collection_data)\n",
+    "req = requests.post(url, data=payload, headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "571ce8a1-0dd2-42b4-8a90-00e65fbb2aaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f\"{system_stac_endpoint}/collections/{simple_collection_id}/items/20201211_223832_CS2\"\n",
+    "req = requests.delete(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91e054e8-9c6c-43f0-9f1a-59a7ed7b57d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f\"{system_stac_endpoint}/collections/{simple_collection_id}/items/20201212_223832_CS2\"\n",
+    "req = requests.delete(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "10bf1d4d-c52e-466e-832d-451cf3aac01d",
    "metadata": {},
    "source": [
