Fix STAC API Transactions demo

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -3062,8 +3062,8 @@
    "source": [
     "response = requests.get(\"https://raw.githubusercontent.com/radiantearth/stac-spec/refs/heads/master/examples/collection.json\")\n",
     "response.raise_for_status()\n",
-    "payload = response.json()\n",
-    "simple_collection_id = payload['id']"
+    "payload = response\n",
+    "simple_collection_id = response.json()['id']"
    ]
   },
   {
@@ -3087,15 +3087,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9ff7ffa-11be-4b96-a522-db69a89fff98",
+   "metadata": {},
+   "source": [
+    "Delete STAC Collection."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d793b5bf-a0db-42aa-926f-e8685aeb2e8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# QA Records\n",
-    "# url = f'https://resource-catalogue.{base_domain}/collections/metadata:main/items/{simple_collection_id}'\n",
-    "# req = requests.delete(url)"
+    "url = f\"{system_stac_endpoint}/collections/{simple_collection_id}\"\n",
+    "req = requests.delete(url)"
    ]
   },
   {
@@ -3104,19 +3111,6 @@
    "metadata": {},
    "source": [
     "Create STAC Collection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96db384d-b80a-4463-a712-6dee009ef3be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# QA Records\n",
-    "# url = f'https://resource-catalogue.{base_domain}/collections/metadata:main/items/'\n",
-    "# headers = {'content-type': 'application/geo+json'}\n",
-    "# req = requests.post(url, data=payload, headers=headers)"
    ]
   },
   {
