Issue with OGC API - Records Transaction has been fixed

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -2526,13 +2526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Disabled due to POST issue https://github.com/geopython/pycsw/issues/809\n",
-    "#r.collection_item_create(collection_id, si)\n",
-    "\n",
-    "url = f'{system_catalogue_endpoint}/collections/metadata:main/items'\n",
-    "headers = {'content-type': 'application/geo+json'}\n",
-    "payload = open(stac_data)\n",
-    "req = requests.post(url, data=payload, headers=headers)"
+    "r.collection_item_create(collection_id, si)"
    ]
   },
   {
