Use s2 iceland collection

--- a/demoroot/notebooks/04 Data Access.ipynb
+++ b/demoroot/notebooks/04 Data Access.ipynb
@@ -543,7 +543,17 @@
     "# See STAC API docs at https://eoapi.develop.eoepca.org/stac/api.html\n",
     "STAC_API_URL = f\"https://eoapi.{base_domain}/stac\"\n",
     "RASTER_API_URL = f\"https://eoapi.{base_domain}/raster\"\n",
-    "COLLECTION_ID = \"sentinel-2-l2a\""
+    "COLLECTION_ID = \"sentinel-2-iceland\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e80b34f-3670-4013-8f6e-4c99e541e1bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STAC_API_URL"
    ]
   },
   {
@@ -568,7 +578,7 @@
     "# Select a collection\n",
     "collections_filter = {\n",
     "    \"op\": \"=\",\n",
-    "    \"args\": [{\"property\": \"collection\"}, \"sentinel-2-l2a\"],\n",
+    "    \"args\": [{\"property\": \"collection\"}, COLLECTION_ID],\n",
     "}"
    ]
   },
@@ -584,11 +594,11 @@
     "  \"type\": \"Polygon\",\n",
     "  \"coordinates\": [\n",
     "    [\n",
-    "      [18.414015459767, 54.232763555655595],\n",
-    "      [20.04561585636452, 54.232763555655595],\n",
-    "      [20.04561585636452, 54.92536348887734],\n",
-    "      [18.414015459767, 54.92536348887734],\n",
-    "      [18.414015459767, 54.232763555655595]\n",
+    "      [-21.470015412404706, 63.55594801099713],\n",
+    "      [-20.336567910645556, 63.55594801099713],\n",
+    "      [-20.336567910645556, 64.17209253282897],\n",
+    "      [-21.470015412404706, 64.17209253282897],\n",
+    "      [-21.470015412404706, 63.55594801099713]\n",
     "    ]\n",
     "  ]\n",
     "}\n",
@@ -603,7 +613,7 @@
    "outputs": [],
    "source": [
     "# Define your time interval of interest\n",
-    "TIME_INTERVAL = [\"2023-06-01T00:00:00Z\", \"2023-09-30T23:59:59Z\"]\n",
+    "TIME_INTERVAL = [\"2023-07-01T00:00:00Z\", \"2023-07-31T23:59:59Z\"]\n",
     "temporal_filter = {\n",
     "    \"op\": \"t_intersects\",\n",
     "    \"args\": [{\"property\": \"datetime\"}, {\"interval\": TIME_INTERVAL}],\n",
@@ -618,7 +628,7 @@
    "outputs": [],
    "source": [
     "# Additional filters can be applied for other search criteria like <= maximum eo:cloud_cover in item properties\n",
-    "cloud_filter = {\"op\": \"<=\", \"args\": [{\"property\": \"eo:cloud_cover\"}, 10]}"
+    "cloud_filter = {\"op\": \"<=\", \"args\": [{\"property\": \"eo:cloud_cover\"}, 100]}"
    ]
   },
   {
@@ -704,8 +714,8 @@
     "        # Info to add to the tilejson response\n",
     "        \"minzoom\": 9,\n",
     "        \"maxzoom\": 12,\n",
-    "        \"assets\": [\"B04_60m\", \"B03_60m\", \"B02_60m\"],\n",
-    "        \"color_formula\": \"Gamma RGB 3.2 Saturation 0.8 Sigmoidal RGB 25 0.35\",\n",
+    "        \"assets\": [\"red\", \"green\", \"blue\"],\n",
+    "        \"color_formula\": \"Gamma RGB 5 Saturation 0.8 Sigmoidal RGB 20 0.35\",\n",
     "        \"nodata\": 0,\n",
     "    },\n",
     ")\n",
@@ -726,6 +736,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4c319780-4544-492e-a169-c93abe5fec60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_center = tilejson[\"center\"][:2][::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1658b1e8-7671-465f-944c-b3a5af33650d",
    "metadata": {},
    "outputs": [],
@@ -733,10 +753,10 @@
     "# Set up a map located w/in event bounds\n",
     "m = Map(\n",
     "    tiles=\"OpenStreetMap\",\n",
-    "    location=tilejson[\"center\"][:2][::-1],\n",
+    "    location=map_center,\n",
     "    zoom_start=tilejson[\"minzoom\"],\n",
-    "    min_zoom=tilejson[\"minzoom\"],\n",
-    "    max_zoom=tilejson[\"maxzoom\"]\n",
+    "    min_zoom=0,\n",
+    "    max_zoom=20\n",
     ")\n",
     "\n",
     "# Add the formatted map layer\n",
@@ -801,8 +821,8 @@
     "        # Info to add to the tilejson response\n",
     "        \"minzoom\": 9,\n",
     "        \"maxzoom\": 12,\n",
-    "        \"assets\": [\"B04_60m\", \"B03_60m\", \"B02_60m\"],\n",
-    "        \"color_formula\": \"Gamma RGB 3.2 Saturation 0.8 Sigmoidal RGB 25 0.35\",\n",
+    "        \"assets\": [\"red\", \"green\", \"blue\"],\n",
+    "        \"color_formula\": \"Gamma RGB 5 Saturation 0.8 Sigmoidal RGB 20 0.35\",\n",
     "        \"nodata\": 0,\n",
     "    },\n",
     ")\n",
@@ -830,10 +850,10 @@
     "# Set up a map located w/in event bounds\n",
     "m = Map(\n",
     "    tiles=\"OpenStreetMap\",\n",
-    "    location=[54.530117000000004, 18.8],\n",
+    "    location=map_center,\n",
     "    zoom_start=tilejson[\"minzoom\"],\n",
-    "    min_zoom=tilejson[\"minzoom\"],\n",
-    "    max_zoom=tilejson[\"maxzoom\"]\n",
+    "    min_zoom=0,\n",
+    "    max_zoom=20\n",
     ")\n",
     "\n",
     "# Add the formatted map layer\n",
@@ -988,6 +1008,61 @@
     "for scene in resp['scenes']:\n",
     "    print(scene)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5f75df3-85c3-4b14-b7e4-421ac40e4f0a",
+   "metadata": {},
+   "source": [
+    "## (WIP) Protected STAC API Transaction Extension methods (POST to /collections etc.) require authorization\n",
+    "\n",
+    "WIP, see https://github.com/EOEPCA/resource-discovery/issues/106"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06fd6c25-bcd3-4bc2-a99c-55508471549e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_domain = \"develop.eoepca.org\"\n",
+    "\n",
+    "PROTECTED_STAC_API_URL = f\"https://eoapi.apx.{base_domain}/stac\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72f119a4-8df8-458f-8846-d4ea58f5bfcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d4981b2-52c1-4696-9931-de5392b18ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(f\"{PROTECTED_STAC_API_URL}/collections\")\n",
+    "response.raise_for_status()\n",
+    "assert \"collections\" in response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00855a05-0a32-412b-86d8-9f0424b4ce9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(f\"{PROTECTED_STAC_API_URL}/collections\")\n",
+    "assert response.status_code == 401  # 401 Unauthorized"
+   ]
   }
  ],
  "metadata": {
@@ -1006,7 +1081,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
