Update registration harvester notebook

--- a/demoroot/notebooks/06 Resource Registration Harvester.ipynb
+++ b/demoroot/notebooks/06 Resource Registration Harvester.ipynb
@@ -23,23 +23,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0b3bef66",
-   "metadata": {},
-   "source": [
-    "### Workflow deployment"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c7569d4",
+   "id": "11cd1a65",
    "metadata": {},
    "outputs": [],
    "source": [
     "from requests import Session\n",
     "from requests.auth import HTTPBasicAuth\n",
     "import json\n",
+    "import requests\n",
+    "import os\n",
     "\n",
     "# Setup connection to Flowable API\n",
     "flowable_base_url = \"https://registration-harvester-api.develop.eoepca.org/flowable-rest\"\n",
@@ -49,13 +43,173 @@
     "flowable_session = Session()\n",
     "flowable_session.auth = HTTPBasicAuth(flowable_rest_user, flowable_rest_pw)\n",
     "if requests_ca_bundle is not None:\n",
-    "    flowable_session.verify = requests_ca_bundle\n",
-    "\n",
-    "# List deployed workflows (processes)\n",
-    "response = flowable_session.get(url=f\"{flowable_base_url}/service/repository/process-definitions\")\n",
+    "    flowable_session.verify = requests_ca_bundle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b3bef66",
+   "metadata": {},
+   "source": [
+    "## Workflow Management\n",
+    "### Deployments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebbfa334",
+   "metadata": {},
+   "source": [
+    "List current deployments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a974144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f\"{flowable_base_url}/service/repository/deployments\"\n",
+    "print(f\"GET {url}\")\n",
+    "response = flowable_session.get(url)\n",
+    "deployments = response.json()[\"data\"]\n",
+    "if len(deployments) == 0:\n",
+    "    print(\"No workflows deployed\")\n",
+    "else:\n",
+    "    for idx, deployment in enumerate(deployments, 1):\n",
+    "        print(\"%-2s %-25s deployed at: %-5s \" % (idx, deployment['name'], deployment['deploymentTime']))\n",
+    "        #print(f\"{idx} {deployment['name']} deployed at: {deployment['deploymentTime']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acb6104f",
+   "metadata": {},
+   "source": [
+    "Deploy the Landsat workflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e03d3d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "landsat_bpmn_files = [\n",
+    "    \"https://raw.githubusercontent.com/EOEPCA/registration-harvester/refs/heads/main/workflows/landsat.bpmn\", \n",
+    "    \"https://raw.githubusercontent.com/EOEPCA/registration-harvester/refs/heads/main/workflows/landsat-scene-ingestion.bpmn\"\n",
+    "]\n",
+    "for bpmn in landsat_bpmn_files:\n",
+    "    bpmn_file = {os.path.basename(bpmn): requests.get(bpmn).text}\n",
+    "    response = flowable_session.post(f\"{flowable_base_url}/service/repository/deployments\", files=bpmn_file)\n",
+    "    print(f\"Sucessfully deployed workflow: {response.json()[\"url\"]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbd10e68",
+   "metadata": {},
+   "source": [
+    "Deploy the Sentinel workflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59461177",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentinel_bpmn_files = [\n",
+    "    \"https://raw.githubusercontent.com/EOEPCA/registration-harvester/refs/heads/main/workflows/sentinel.bpmn\", \n",
+    "    \"https://raw.githubusercontent.com/EOEPCA/registration-harvester/refs/heads/main/workflows/sentinel-scene-ingestion.bpmn\"\n",
+    "]\n",
+    "for bpmn in sentinel_bpmn_files:\n",
+    "    bpmn_file = {os.path.basename(bpmn): requests.get(bpmn).text}\n",
+    "    response = flowable_session.post(f\"{flowable_base_url}/service/repository/deployments\", files=bpmn_file)\n",
+    "    print(f\"Sucessfully deployed workflow: {response.json()[\"url\"]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a5ead12",
+   "metadata": {},
+   "source": [
+    "Delete workflows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "412c12d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for deployment in deployments:\n",
+    "    deployment_id = deployment['id']\n",
+    "    url = f\"{flowable_base_url}/service/repository/deployments/{deployment_id}\"\n",
+    "    response = flowable_session.delete(url)\n",
+    "    print(f\"Delete {deployment['name']} Status: {response.status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9763831",
+   "metadata": {},
+   "source": [
+    "### Workflow definitions (process definitions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1235f850",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List deployed workflows (process definitions)\n",
+    "url = f\"{flowable_base_url}/service/repository/process-definitions\"\n",
+    "print(f\"GET {url}\")\n",
+    "response = flowable_session.get(url)\n",
     "processes = response.json()[\"data\"]\n",
-    "for idx, process in enumerate(processes, 1):\n",
-    "    print(f\"{idx} {process['name']} ({process['id']})\")"
+    "if len(processes) == 0:\n",
+    "    print(\"No workflow definitions\")\n",
+    "else:\n",
+    "    for idx, process in enumerate(processes, 1):\n",
+    "        print(\"%-2s %-28s version: %-5s id: %s\" % (idx, process['name'], process['version'], process['id']))\n",
+    "        if process[\"name\"] == \"Landsat Workflow\":\n",
+    "            landsat_process_id = process[\"id\"]\n",
+    "        if process[\"name\"] == \"Sentinel Registration\":\n",
+    "            sentinel_process_id = process[\"id\"]        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "813ebfab",
+   "metadata": {},
+   "source": [
+    "### Running workflows (process instances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c7569d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List running workflows (processe instances)\n",
+    "url = f\"{flowable_base_url}/service/runtime/process-instances\"\n",
+    "print(f\"GET {url}\")\n",
+    "response = flowable_session.get(url)\n",
+    "process_instances = response.json()[\"data\"]\n",
+    "if len(process_instances) == 0:\n",
+    "    print(\"No running workflows\")\n",
+    "else:\n",
+    "    for idx, process in enumerate(process_instances, 1):\n",
+    "        print(\"%s %-25s started at: %-25s id: %s\" % (idx, process['processDefinitionName'], process['startTime'], process['id']))"
    ]
   },
   {
@@ -67,7 +221,9 @@
     "\n",
     "The Landsat harvesting workflow consists of two BPMN processes. The main process (Landsat Registration) searches for new data at USGS. For each new scene found, the workflow executes another process (Landsat Scene Ingestion) which performs the individual steps for harvesting and registering the data.\n",
     "\n",
-    "![Landsat workflow](img/landsat-workflow-bpmn.png)"
+    "![Landsat workflow](img/landsat-workflow-bpmn.png)\n",
+    "\n",
+    "![Landsat Scene Ingstion](img/landsat-scene-ingestion.png)"
    ]
   },
   {
@@ -77,11 +233,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get process id for Landsat workflow\n",
-    "for process in processes:\n",
-    "    if process[\"name\"] == \"Landsat Workflow\":\n",
-    "        processId = process[\"id\"]    \n",
-    "\n",
     "# Define the filter for a manual workflow execution\n",
     "query = json.dumps({ \"created\": { \"gte\": \"2024-12-13T15:00:00.000000Z\", \"lt\": \"2024-12-13T16:00:00.000000Z\" } })\n",
     "variables = [\n",
@@ -93,7 +244,7 @@
     "\n",
     "# Create the JSON body for HTTP request which triggers the workflow\n",
     "body = {}\n",
-    "body[\"processDefinitionId\"] = processId\n",
+    "body[\"processDefinitionId\"] = landsat_process_id\n",
     "body[\"variables\"] = variables\n",
     "print(json.dumps(body, indent=4))"
    ]
@@ -105,10 +256,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Send request to start the workflow\n",
+    "# Send the HTTP request to start the workflow\n",
     "response = flowable_session.post(url=f\"{flowable_base_url}/service/runtime/process-instances\", json=body)\n",
     "print(response.status_code)\n",
-    "#print(json.dumps(response.json(), indent=4))\n",
     "print(f\"Created process instance at {response.json()[\"url\"]}\")"
    ]
   },
@@ -121,7 +271,9 @@
     "\n",
     "The Sentinel harvesting workflow consists of two BPMN processes. The main process (Sentinel Registration Hourly) will be executed automatically be the Flowable engine every hour and searches for new data at CDSE. For each new scene discovered, the workflow  executes another process (Sentinel Scene Ingestion) which performs the individual steps for harvesting and registering the data.\n",
     "\n",
-    "![Sentinel workflow](img/sentinel-workflow-bpmn.png)"
+    "![Sentinel Workflow](img/sentinel-workflow-bpmn.png)\n",
+    "\n",
+    "![Sentinel Scene Ingstion](img/sentinel-scene-ingestion.png)"
    ]
   },
   {
@@ -131,11 +283,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get process id for Sentinel workflow\n",
-    "for process in processes:\n",
-    "    if process[\"name\"] == \"Sentinel Registration\":\n",
-    "        processId = process[\"id\"]\n",
-    "\n",
     "# Define the filter for a manual workflow execution\n",
     "start_time = \"2025-01-06T00:00:00.000000Z\"\n",
     "stop_time = \"2025-01-08T00:00:00.000000Z\"\n",
@@ -148,7 +295,7 @@
     "\n",
     "# Create the JSON body for HTTP request which triggers the workflow\n",
     "body = {}\n",
-    "body[\"processDefinitionId\"] = processId\n",
+    "body[\"processDefinitionId\"] = sentinel_process_id\n",
     "body[\"variables\"] = [\n",
     "    {\n",
     "        \"name\": \"filter\",\n",
@@ -169,7 +316,6 @@
     "# Send request to start the workflow\n",
     "response = flowable_session.post(url=f\"{flowable_base_url}/service/runtime/process-instances\", json=body)\n",
     "print(response.status_code)\n",
-    "#print(json.dumps(response.json(), indent=4))\n",
     "print(f\"Created process instance at {response.json()[\"url\"]}\")"
    ]
   }
