--- a/demoroot/notebooks/06 Resource Registration Harvester.ipynb
+++ b/demoroot/notebooks/06 Resource Registration Harvester.ipynb
@@ -13,13 +13,7 @@
    "id": "0c9b1ddd",
    "metadata": {},
    "source": [
-    "[Flowable](https://www.flowable.com/open-source/docs/) is an Open Source workflow and Business Process Management (BPM) platform. It has a [REST API](https://registration-harvester-api.develop.eoepca.org/flowable-rest/docs) to manage and execute business processes:\n",
-    "- deploy BPMN 2.0 process definitions\n",
-    "- creating process instances of those process definitions\n",
-    "- accessing active or historical process instances and related data\n",
-    "- etc.\n",
-    "  \n",
-    "In this demo we will use the REST API to deploy and start workflows."
+    "In this demo we will use the Flowable [REST API](https://registration-harvester-api.develop.eoepca.org/flowable-rest/docs) to deploy and execute workflows."
    ]
   },
   {
@@ -39,11 +33,8 @@
     "flowable_base_url = \"https://registration-harvester-api.develop.eoepca.org/flowable-rest\"\n",
     "flowable_rest_user = \"eoepca\"\n",
     "flowable_rest_pw = \"eoepca\"\n",
-    "requests_ca_bundle = None\n",
     "flowable_session = Session()\n",
-    "flowable_session.auth = HTTPBasicAuth(flowable_rest_user, flowable_rest_pw)\n",
-    "if requests_ca_bundle is not None:\n",
-    "    flowable_session.verify = requests_ca_bundle"
+    "flowable_session.auth = HTTPBasicAuth(flowable_rest_user, flowable_rest_pw)"
    ]
   },
   {
@@ -159,7 +150,8 @@
    "id": "d9763831",
    "metadata": {},
    "source": [
-    "### Workflow definitions (process definitions)"
+    "### Workflow definitions (process definitions)\n",
+    "List deployed workflows (process definitions)"
    ]
   },
   {
@@ -169,7 +161,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List deployed workflows (process definitions)\n",
     "url = f\"{flowable_base_url}/service/repository/process-definitions\"\n",
     "print(f\"GET {url}\")\n",
     "response = flowable_session.get(url)\n",
@@ -190,7 +181,8 @@
    "id": "813ebfab",
    "metadata": {},
    "source": [
-    "### Running workflows (process instances)"
+    "### Running workflows (process instances)\n",
+    "List running workflows (processe instances)"
    ]
   },
   {
@@ -200,7 +192,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List running workflows (processe instances)\n",
     "url = f\"{flowable_base_url}/service/runtime/process-instances\"\n",
     "print(f\"GET {url}\")\n",
     "response = flowable_session.get(url)\n",
@@ -227,16 +218,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21c81efd",
+   "metadata": {},
+   "source": [
+    "Define the filter to start the workflow with"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f5d2a858",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the filter for a manual workflow execution\n",
     "query = json.dumps({ \"created\": { \"gte\": \"2024-12-13T15:00:00.000000Z\", \"lt\": \"2024-12-13T16:00:00.000000Z\" } })\n",
     "variables = [\n",
-    "    # {\"name\": \"collections\", \"type\": \"string\", \"value\": \"landsat-c2l2-sr,landsat-c2l1\"},\n",
+    "    # {\"name\": \"datetime_interval\", \"type\": \"string\", \"value\": \"2024-11-12T15:00:00.000000Z/2024-11-12T16:00:00.000000Z\"},    \n",
     "    {\"name\": \"collections\", \"type\": \"string\", \"value\": \"landsat-c2l2-sr\"},\n",
     "    {\"name\": \"bbox\", \"type\": \"string\", \"value\": \"8,40,18,60\"},\n",
     "    {\"name\": \"query\", \"type\": \"string\", \"value\": query},\n",
@@ -250,13 +248,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e9d5a4a",
+   "metadata": {},
+   "source": [
+    "Send the HTTP request to Flowable REST API to start the workflow"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d636dba3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Send the HTTP request to start the workflow\n",
     "response = flowable_session.post(url=f\"{flowable_base_url}/service/runtime/process-instances\", json=body)\n",
     "print(response.status_code)\n",
     "print(f\"Created process instance at {response.json()[\"url\"]}\")"
@@ -277,13 +282,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b60d86cd",
+   "metadata": {},
+   "source": [
+    "Define the filter to start the workflow with"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "983fb1cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the filter for a manual workflow execution\n",
     "start_time = \"2025-01-06T00:00:00.000000Z\"\n",
     "stop_time = \"2025-01-08T00:00:00.000000Z\"\n",
     "datetime = f\"ContentDate/Start ge {start_time} and ContentDate/Start lt {stop_time}\"\n",
@@ -307,13 +319,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fa95c71",
+   "metadata": {},
+   "source": [
+    "Send the HTTP request to Flowable REST API to start the workflow"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7fdff6d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Send request to start the workflow\n",
     "response = flowable_session.post(url=f\"{flowable_base_url}/service/runtime/process-instances\", json=body)\n",
     "print(response.status_code)\n",
     "print(f\"Created process instance at {response.json()[\"url\"]}\")"
