--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -2875,7 +2875,7 @@
    "id": "55d5ac16-9e3a-44ca-97dc-e7859bb07147",
    "metadata": {},
    "source": [
-    "## STAC API Transactions demo"
+    "### STAC API Transactions demo"
    ]
   },
   {
@@ -3661,7 +3661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
