--- a/demoroot/notebooks/04 Data Access.ipynb
+++ b/demoroot/notebooks/04 Data Access.ipynb
@@ -1028,7 +1028,7 @@
    "source": [
     "base_domain = \"develop.eoepca.org\"\n",
     "\n",
-    "PROTECTED_STAC_API_URL = f\"https://eoapi.apx.{base_domain}/stac\""
+    "PROTECTED_STAC_API_URL = f\"https://eoapi.{base_domain}/stac\""
    ]
   },
   {
@@ -1081,7 +1081,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
