Add type search for workflow example

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -2159,6 +2159,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38d18057-e6e4-45ef-9ac7-0813e4f5a480",
+   "metadata": {},
+   "source": [
+    "Search for the workflow record with \"type=\" query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2f74f2e-262a-440b-8b6d-1891562efd30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/collections/metadata:main/items?type=process\", headers=dict(f=\"json\"))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fff1f593-022f-4d20-8c08-c7f3ac649b57",
    "metadata": {},
    "source": [
@@ -2172,7 +2192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time.sleep(3)\n",
+    "#time.sleep(3)\n",
     "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/worldcereal_inference\", headers=dict(f=\"json\"))\n",
     "response.raise_for_status()\n",
     "response.json()"
