--- a/demoroot/notebooks/04 Data Access.ipynb
+++ b/demoroot/notebooks/04 Data Access.ipynb
@@ -867,150 +867,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1fa38d-6d15-4c73-81b7-041efd7bb355",
-   "metadata": {},
-   "source": [
-    "## Data Analysis with Coverages (OGC API Coverages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd109d9c-1515-43ee-a97d-e215a6b8e1df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "COV_API_URL = f\"https://stacture.{base_domain}\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "982b993d",
-   "metadata": {},
-   "source": [
-    "### Listing collections"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4cf2242-9ddf-4fb6-bfbb-568b35cf73f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "from rasterio.io import MemoryFile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe14d5cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "COV_COLLECTIONS = f\"{COV_API_URL}/collections\"\n",
-    "resp = requests.get(COV_COLLECTIONS).json()\n",
-    "for collection in resp['collections']:\n",
-    "    print(\"####\")\n",
-    "    print(collection['title'])\n",
-    "    print(collection['id'])\n",
-    "\n",
-    "collection_id = collection['id']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "89f15f8c",
-   "metadata": {},
-   "source": [
-    "### Get collection metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c822dc9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "COLLECTION_URL = f\"{COV_API_URL}/collections/{collection_id}\"\n",
-    "resp = requests.get(COLLECTION_URL).json()\n",
-    "print(resp[\"description\"])\n",
-    "print(resp['extent'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9a4d2bd",
-   "metadata": {},
-   "source": [
-    "### Get collection Coverage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74b9bbb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "COVERAGE_URL = f\"{COLLECTION_URL}/coverage\"\n",
-    "params = {\n",
-    "    \"bbox\": \"18.5,52.4,18.7,52.7\",\n",
-    "    \"datetime\": \"2023-12-31T10:00:00Z/2023-12-31T10:05:00Z\",\n",
-    "    \"bbox-crs\": \"EPSG:4326\",\n",
-    "    \"width\": 512,\n",
-    "    \"height\": 512,\n",
-    "    \"f\": \"image/tiff\",\n",
-    "}\n",
-    "resp = requests.get(COVERAGE_URL, params=params)\n",
-    "resp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b3b5d18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with MemoryFile(resp.content) as memfile:\n",
-    "    with memfile.open() as dataset:\n",
-    "        print(\"BBOX:\", dataset.bounds)\n",
-    "        print(\"CRS:\", dataset.crs)\n",
-    "        data_array = dataset.read()\n",
-    "\n",
-    "print(\"SHAPE:\", data_array.shape)\n",
-    "print(\"MIN:\", data_array.min())\n",
-    "print(\"MAX:\", data_array.max())\n",
-    "print(\"MEAN:\", data_array.mean())\n",
-    "print(\"STDEV:\", data_array.std())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "86057ea2",
-   "metadata": {},
-   "source": [
-    "### Listing scenes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "530e20b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SCENES = f\"{COV_API_URL}/collections/{collection_id}/scenes\"\n",
-    "resp = requests.get(SCENES).json()\n",
-    "for scene in resp['scenes']:\n",
-    "    print(scene)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e5f75df3-85c3-4b14-b7e4-421ac40e4f0a",
    "metadata": {},
    "source": [
@@ -1063,11 +919,123 @@
     "response = requests.post(f\"{PROTECTED_STAC_API_URL}/collections\")\n",
     "assert response.status_code == 401  # 401 Unauthorized"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7679972",
+   "metadata": {},
+   "source": [
+    "## (WIP) Data Visualization with Maps (OGC API Maps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9fb2e7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAPS_API_URL = f\"https://maps.{base_domain}\"\n",
+    "import requests\n",
+    "from PIL import Image\n",
+    "from IPython.display import display\n",
+    "import io\n",
+    "collection = \"sentinel-2-l2a-render\"\n",
+    "params = {\n",
+    "    \"bbox\": \"-22,64,-21.7,64.3\",\n",
+    "    \"datetime\": \"2023-10-31T00:00:00Z/2023-10-31T23:59:59Z\",\n",
+    "    \"width\": 256,\n",
+    "    \"height\": 256,\n",
+    "}\n",
+    "response = requests.get(f\"{MAPS_API_URL}/collections/{collection}/map\", params=params)\n",
+    "response.raise_for_status()\n",
+    "img = Image.open(io.BytesIO(response.content))\n",
+    "display(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c267aafc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection = \"sentinel-2-l2a-render\"\n",
+    "style = \"ndvi\"\n",
+    "params = {\n",
+    "    \"bbox\": \"-22,64,-21.7,64.3\",\n",
+    "    \"datetime\": \"2023-10-31T00:00:00Z/2023-10-31T23:59:59Z\",\n",
+    "    \"width\": 256,\n",
+    "    \"height\": 256,\n",
+    "}\n",
+    "response = requests.get(f\"{MAPS_API_URL}/collections/{collection}/styles/{style}/map\", params=params)\n",
+    "response.raise_for_status()\n",
+    "img = Image.open(io.BytesIO(response.content))\n",
+    "display(img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d1fa38d-6d15-4c73-81b7-041efd7bb355",
+   "metadata": {},
+   "source": [
+    "## (Paused) Data Analysis with Coverages (OGC API Coverages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd109d9c-1515-43ee-a97d-e215a6b8e1df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# COV_API_URL = f\"https://stacture.{base_domain}\"\n",
+    "# import requests\n",
+    "# from rasterio.io import MemoryFile\n",
+    "# COV_COLLECTIONS = f\"{COV_API_URL}/collections\"\n",
+    "# resp = requests.get(COV_COLLECTIONS).json()\n",
+    "# for collection in resp['collections']:\n",
+    "#     print(\"####\")\n",
+    "#     print(collection['title'])\n",
+    "#     print(collection['id'])\n",
+    "\n",
+    "# collection_id = collection['id']\n",
+    "# COLLECTION_URL = f\"{COV_API_URL}/collections/{collection_id}\"\n",
+    "# resp = requests.get(COLLECTION_URL).json()\n",
+    "# print(resp[\"description\"])\n",
+    "# print(resp['extent'])\n",
+    "# COVERAGE_URL = f\"{COLLECTION_URL}/coverage\"\n",
+    "# params = {\n",
+    "#     \"bbox\": \"18.5,52.4,18.7,52.7\",\n",
+    "#     \"datetime\": \"2023-12-31T10:00:00Z/2023-12-31T10:05:00Z\",\n",
+    "#     \"bbox-crs\": \"EPSG:4326\",\n",
+    "#     \"width\": 512,\n",
+    "#     \"height\": 512,\n",
+    "#     \"f\": \"image/tiff\",\n",
+    "# }\n",
+    "# resp = requests.get(COVERAGE_URL, params=params)\n",
+    "# resp\n",
+    "# with MemoryFile(resp.content) as memfile:\n",
+    "#     with memfile.open() as dataset:\n",
+    "#         print(\"BBOX:\", dataset.bounds)\n",
+    "#         print(\"CRS:\", dataset.crs)\n",
+    "#         data_array = dataset.read()\n",
+    "\n",
+    "# print(\"SHAPE:\", data_array.shape)\n",
+    "# print(\"MIN:\", data_array.min())\n",
+    "# print(\"MAX:\", data_array.max())\n",
+    "# print(\"MEAN:\", data_array.mean())\n",
+    "# print(\"STDEV:\", data_array.std())\n",
+    "# SCENES = f\"{COV_API_URL}/collections/{collection_id}/scenes\"\n",
+    "# resp = requests.get(SCENES).json()\n",
+    "# for scene in resp['scenes']:\n",
+    "#     print(scene)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "eoepca-demo",
    "language": "python",
    "name": "python3"
   },
@@ -1081,7 +1049,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
